<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.zwx.scan.app.feature.personal.PasswordManageActivity">

    <include layout="@layout/layout_common_title"/>

    <include layout="@layout/layout_line_horizontal"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/padding_10"
        android:background="@color/white"
        android:paddingLeft="@dimen/padding_20"
        android:paddingRight="@dimen/padding_20">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_50"
            >
            <TextView
                android:id="@+id/tv_psd_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/old_psd"
                android:textSize="@dimen/font_size_14"
                android:textColor="@color/color_gray_deep"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"/>



            <EditText
                android:id="@+id/edt_old_psd"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_35"
                android:background="@color/white"
                android:hint="@string/tip_input_old_psd"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingRight="@dimen/margin_10"
                android:paddingLeft="@dimen/margin_10"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/color_gray_light"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="@dimen/font_size_14"
                android:layout_centerInParent="true"
                android:layout_alignParentRight="true"/>


        </RelativeLayout>
        <include layout="@layout/layout_line_horizontal"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_50">
            <TextView
                android:id="@+id/tv_new_psd_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_psd"
                android:textSize="@dimen/font_size_14"
                android:textColor="@color/color_gray_deep"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"/>



            <EditText
                android:id="@+id/edt_new_psd"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_35"
                android:background="@color/white"
                android:hint="@string/tip_input_new_psd"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingRight="@dimen/margin_10"
                android:paddingLeft="@dimen/margin_10"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/color_gray_light"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="@dimen/font_size_14"
                android:layout_centerInParent="true"
                android:layout_alignParentRight="true"/>


        </RelativeLayout>


    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_50"
        android:paddingLeft="@dimen/padding_20"
        android:paddingRight="@dimen/padding_20">

        <CheckBox
            android:id="@+id/cb_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_psd"
            android:textSize="@dimen/font_size_14"
            android:button="@null"
            android:drawableLeft="@drawable/shape_checkbox_check"
            android:drawablePadding="@dimen/margin_5"
            android:layout_marginTop="@dimen/margin_5"
            android:gravity="center"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"/>
        <TextView
            android:id="@+id/tv_psd_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="@dimen/font_size_14"
            android:textColor="@color/color_red"
            android:layout_toRightOf="@id/cb_select"
            android:layout_centerInParent="true"
            android:gravity="right|center"
            android:layout_marginLeft="@dimen/margin_10"
            android:paddingTop="@dimen/margin_10"
            android:paddingBottom="@dimen/margin_10"/>


    </RelativeLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_50"
        android:layout_marginLeft="@dimen/margin_40"
        android:layout_marginRight="@dimen/margin_40"
        android:background="@drawable/ic_btn_bg"
        android:layout_marginBottom="@dimen/margin_10"
        android:text="@string/queren"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_16"
        android:layout_gravity="bottom"
        android:layout_marginTop="150dp"/>

</LinearLayout>
