<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.zwx.scan.app.feature.contractmanage.ContractInfoFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/line"
        android:layout_marginBottom="62dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingLeft="@dimen/margin_20"
                android:paddingRight="@dimen/margin_20">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_alignParentLeft="true"
                    android:drawableLeft="@drawable/ic_label_left"
                    android:drawablePadding="@dimen/padding_10"
                    android:gravity="center|left"
                    android:text="@string/jichuqianyuexinxi"
                    android:textColor="@color/color_gray_dark"
                    android:textSize="@dimen/font_size_16" />


                <RelativeLayout
                    android:id="@+id/rl_contract_no"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_50">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerInParent="true"
                        android:text="合同编号"
                        android:textColor="@color/color_gray_deep"
                        android:textSize="@dimen/font_size_14" />

                    <TextView
                        android:id="@+id/tv_contract_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:gravity="center|right"
                        android:text=""
                        android:textColor="@color/color_gray_deep"
                        android:textSize="@dimen/font_size_14" />


                </RelativeLayout>
                <include layout="@layout/layout_line_horizontal" />

                <RelativeLayout
                    android:id="@+id/rl_start"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_50">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerInParent="true"
                        android:text="@string/start_time"
                        android:textColor="@color/color_gray_deep"
                        android:textSize="@dimen/font_size_14" />

                    <TextView
                        android:id="@+id/tv_start_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:gravity="center|right"
                        android:text=""
                        android:textColor="@color/color_gray_deep"
                        android:textSize="@dimen/font_size_14" />


                </RelativeLayout>

                <include layout="@layout/layout_line_horizontal" />

                <RelativeLayout
                    android:id="@+id/rl_end"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_50">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerInParent="true"
                        android:text="@string/end_time"
                        android:textColor="@color/color_gray_deep"
                        android:textSize="@dimen/font_size_14" />

                    <TextView
                        android:id="@+id/tv_end_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:gravity="center|right"
                        android:text=""
                        android:textColor="@color/color_gray_deep"
                        android:textSize="@dimen/font_size_14" />


                </RelativeLayout>
                <include layout="@layout/layout_line_horizontal" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_50">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerInParent="true"
                        android:text="@string/service_money"
                        android:textColor="@color/color_gray_deep"
                        android:textSize="@dimen/font_size_14" />

                    <TextView
                        android:id="@+id/tv_month_service_money"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:gravity="center|right"
                        android:text=""
                        android:textColor="@color/color_gray_deep"
                        android:textSize="@dimen/font_size_14" />


                </RelativeLayout>
                <include layout="@layout/layout_line_horizontal" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_50">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerInParent="true"
                        android:text="@string/pay_way"
                        android:textColor="@color/color_gray_deep"
                        android:textSize="@dimen/font_size_14" />

                    <TextView
                        android:id="@+id/tv_pay_mode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:gravity="center|right"
                        android:text=""
                        android:textColor="@color/color_gray_deep"
                        android:textSize="@dimen/font_size_14" />


                </RelativeLayout>


            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingLeft="@dimen/margin_20"
            android:paddingRight="@dimen/margin_20"
            android:layout_marginBottom="@dimen/margin_20">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:drawableLeft="@drawable/ic_label_left"
                android:drawablePadding="@dimen/padding_10"
                android:gravity="center|left"
                android:text="@string/pay_record"
                android:textColor="@color/color_gray_dark"
                android:textSize="@dimen/font_size_16" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/line_color_gray"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:background="#F8F8F8">
                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/line_color_gray"/>
                    <TextView
                        android:id="@+id/tv_coupon"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/pay_day"
                        android:textSize="@dimen/font_size_14"
                        android:textColor="@color/color_gray_deep"/>
                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/line_color_gray"/>
                    <TextView
                        android:id="@+id/tv_index"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/pay_money"
                        android:textSize="@dimen/font_size_14"
                        android:textColor="@color/color_gray_deep"/>
                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/line_color_gray"/>
                    <TextView
                        android:id="@+id/tv_count"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/is_pay"
                        android:textSize="@dimen/font_size_14"
                        android:textColor="@color/color_gray_deep"/>
                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/line_color_gray"/>

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/line_color_gray"/>

            </LinearLayout>
            <com.zwx.scan.app.widget.MyListView
                android:id="@+id/list_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
